# ut_395t_nlp_final_project

./: .gitignore  CARTOGRAPHY_README.md  CLUSTERING_README.md  EXPERIMENT_EXAMPLES.sh  EXPERIMENT_GUIDE.md  EXPERIMENT_QUICKREF.md  QUICKSTART.md  README.md  TEST_SUITE_SUMMARY.md  analyze_ablations.py  analyze_cartography.py  analyze_dataset.py  analyze_sweep_results.py  cartography_example.ipynb  cluster_analysis.py  data_analysis.ipynb  dataset_cartography.py  dataset_filters.py  embed.py  errors_analysis.py  experiment_analysis.py  experiment_config.py  experiment_runner.py  extract_embeddings.py  full_workflow.sh  helpers.py  pyproject.toml  results.md  rule_based_errors.py  rule_based_errors_updated.py  run.py  run_ablation_study.sh  run_experiment.sh  run_experiments.py  run_tests.sh  run_training.sh  setup_sweeps.sh  sweep_launcher.py  test.json  test_experiment_system.py  (+3 more)
demos/: cluster_filtering_demo.py  filtering_demo.py  test_offsets.py  unified_analysis_demo.py
eval_baseline_emrqa/: eval_metrics.json
example_configs/: baseline.json  cartography_filter.json  combined_strategies.json  label_smoothing.json
experiments/dry_run_test_bbb4a5dc/: config.json
notebooks/: cartography_example.ipynb  data_analysis.ipynb  errors_analysis.ipynb
quickstarts/: ablation_study.md  training_script.md
sweeps/: baseline_sweep.yaml  combined_strategies_sweep.yaml  custom_strategy_sweep.yaml  filtering_strategies_sweep.yaml  smoothing_weighting_sweep.yaml
tests/: README.md  TEST_COMMANDS.md  __init__.py  conftest.py  test_boolean_arguments.py  test_cartography.py  test_cluster_analysis.py  test_dataset_filters.py  test_embeddings_and_utils.py  test_helpers.py  test_id_consistency.py  test_run_integration.py
