[project]
name = "final-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.2",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[project.optional-dependencies]
# UMAP requires numba which doesn't support Python 3.14 yet (as of Dec 2024)
# Use t-SNE or PCA instead, or install in Python 3.10-3.13 environment
# Track: https://github.com/numba/numba/issues/9776
clustering-umap = ["umap-learn>=0.5.0"]

[tool.ruff.lint]
ignore = ["E731"]
