[project]
name = "final-project"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.2",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "umap-learn>=0.5.9.post2",
]

[tool.ruff.lint]
# ignore = ["E731"]
