[project]
name = "final-project"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "hdbscan>=0.8.40",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.2",
    "pytest>=9.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short", "--disable-warnings"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff.lint]
# ignore = ["E731"]
